--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         </div>
 
         <div class="music-year">
-            <span class="play"><a href="#">Play</a></span>
-            <span class="stop"><a href="#">Stop</a></span>
+            <div class="content-play-stop">
+                <span class="play"><img src="play.png" class="img-music" alt=""></span>
+                <span class="stop"><img src="stop.png" class="img-music" alt=""></span>
+            </div>
         </div>
     </div>
     
