--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
             </div>
         </section>
 
+        <section class="sect-secondsMins">
+
+            <h1 class="title-f-principal">Faltan 5 pa' las 12</h1>
+
+            <div class="content-sg-mn">
+                <div class="minutos-div">
+                    <h2 class="title">Minutos</h2>
+                    <p class="minutes"></p>
+                </div>
+
+                <div class="segundos-div">
+                    <h2 class="title">Segundos</h2>
+                    <p class="seconds"></p>
+                </div>
+            </div>
+        </section>
+
         <section class="sect-newyear" dataSect-newyear>
             <div class="newyear-container">
                 <div class="title-phrase">
@@ -61,7 +78,6 @@
                 <button class="boton-mensaje" dataMensajesButton>Nueva frase</button>
             </div>
         </section>
-
     </main>
 
     <script src="script.js" type="module"></script>
