--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="icon-gtechBlanco.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="body">
     
     <video class="video-fondo" autoplay muted loop>
         <source src="nuevoyear.mp4" type="video/mp4" />
