--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <source src="nuevoyear.mp4" type="video/mp4" />
     </video>
 
+    <img src="soledad.gif" class="soledad-fondo" alt="">
+
     <div class="content-redes">
         <div class="imgs">
             <a class="inst-ferdan" target="_blank" href="https://www.instagram.com/dan_fer0911/"><img src="instagram.png" class="img-icono" alt=""></a>
@@ -41,16 +43,14 @@
     
                 <div class="fechaEsperada">
                     <p class="f-esperada">Fecha Esperada</p>
-                    <span class="f-spanEsperada">1 / 01 / 2023</span>
+                    <span class="f-spanEsperada" dataFechaDestino></span>
                 </div>
     
             </div>
         </section>
 
         <section class="sect-secondsMins">
-
             <h1 class="title-f-principal">Faltan 5 pa' las 12</h1>
-
             <div class="content-sg-mn">
                 <div class="minutos-div">
                     <h2 class="title">Minutos</h2>
@@ -61,6 +61,10 @@
                     <h2 class="title">Segundos</h2>
                     <p class="seconds"></p>
                 </div>
+            </div>
+
+            <div class="boton-colocarMusica">
+                <button class="button-musicFive" dataBotonColocarMusic>Colocar música</button>
             </div>
         </section>
 
